# tattoo-me-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.github/: dependabot.yml
migrations/2024-03-09-212258_create_uuid_ossp/: down.sql  up.sql
migrations/2024-03-09-232525_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs  ping_controller.rs
src/models/: user.rs
