[package]
name = "tattoo-me-api"
version = "0.1.0"
authors = ["Maia G. <gabrielmaialva33@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenvy = "0.15"
log = "0.4.21"

[dependencies.diesel]
version = "2.1.0"
features = ["sqlite", "postgres", "uuid", "chrono"]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "serde"]